--- a/fe-interview/package.json
+++ b/fe-interview/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "~18.1.0",
     "@angular/core": "~18.1.0",
     "@angular/forms": "~18.1.0",
+    "@angular/material": "^18.1.1",
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
     "@angular/router": "~18.1.0",
@@ -45,7 +46,7 @@
     "@angular/compiler-cli": "~18.1.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "6.13.1",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "6.13.1",
     "eslint": "^9.7.0",
     "jasmine-core": "~3.8.0",
