--- a/fe-interview/.eslintrc.json
+++ b/fe-interview/.eslintrc.json
@@ -1,315 +1,210 @@
 {
-    "root": true,
-    "ignorePatterns": [],
-    "overrides": [
-      {
-        "files": [
-          "*.ts"
+  "root": true,
+  "ignorePatterns": ["projects/**/*"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@angular-eslint/recommended"
+  ],
+  "plugins": ["@typescript-eslint", "@angular-eslint"],
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2022,
+    "project": "./tsconfig.json"
+  },
+  "overrides": [
+    {
+      "files": ["*.ts"],
+      "extends": [],
+      "rules": {
+        "@angular-eslint/component-class-suffix": [
+          "error",
+          {
+            "suffixes": ["Component", "Container"]
+          }
         ],
-        "parserOptions": {
-          "project": [
-            "tsconfig.json"
-          ],
-          "createDefaultProgram": true
-        },
-        "plugins": [
-          "deprecation",
-          "eslint-plugin-import",
-          "eslint-plugin-prefer-arrow"
+        "@angular-eslint/contextual-lifecycle": "error",
+        "@angular-eslint/directive-class-suffix": "error",
+        "@angular-eslint/no-conflicting-lifecycle": "error",
+        "@angular-eslint/no-host-metadata-property": "off",
+        "@angular-eslint/no-lifecycle-call": "error",
+        "@angular-eslint/no-output-native": "error",
+        "@angular-eslint/no-output-on-prefix": "error",
+        "@angular-eslint/no-pipe-impure": "error",
+        "@angular-eslint/prefer-output-readonly": "error",
+        "@angular-eslint/relative-url-prefix": "error",
+        "@angular-eslint/use-injectable-provided-in": "error",
+        "@angular-eslint/use-lifecycle-interface": "error",
+        "@angular-eslint/use-pipe-transform-interface": "error",
+        "@typescript-eslint/array-type": [
+          "error",
+          {
+            "default": "array"
+          }
         ],
-        "extends": [
-          "eslint:recommended",
-          "plugin:@typescript-eslint/recommended",
-          "plugin:@angular-eslint/recommended",
-          "plugin:@angular-eslint/template/process-inline-templates",
-          "plugin:sonarjs/recommended",
-          "plugin:@ngrx/recommended-requiring-type-checking"
+        "@typescript-eslint/consistent-type-assertions": "error",
+        "@typescript-eslint/consistent-type-definitions": "error",
+        "@typescript-eslint/explicit-member-accessibility": [
+          "error",
+          {
+            "accessibility": "no-public"
+          }
         ],
-        "rules": {
-          "@angular-eslint/component-class-suffix": [
-            "error",
-            {
-              "suffixes": [
-                "Component",
-                "Page"
-              ]
-            }
-          ],
-          "@angular-eslint/component-max-inline-declarations": "error",
-          "@angular-eslint/component-selector": [
-            "off",
-            {
-              "type": [],
-              "prefix": "kebab-case"
-            }
-          ],
-          "@angular-eslint/directive-class-suffix": [
-            "error",
-            {
-              "suffixes": [
-                "Directive",
-                "Adapter"
-              ]
-            }
-          ],
-          "@angular-eslint/directive-selector": [
-            "error",
-            {
-              "type": "attribute",
-              "prefix": [],
-              "style": "camelCase"
-            }
-          ],
-          "@angular-eslint/no-queries-metadata-property": "error",
-          "@angular-eslint/prefer-on-push-component-change-detection": "error",
-          "quotes": [
-            "error",
-            "single",
-            {
-              "avoidEscape": false
-            }
-          ],
-          "semi": [
-            "error",
-            "always"
-          ],
-          "curly": "error",
-          "comma-dangle": [
-            "error",
-            "always-multiline"
-          ],
-          "no-multiple-empty-lines": [
-            "error",
-            {
-              "max": 1
-            }
-          ],
-          "no-restricted-imports": [
-            "error",
-            {
-              "paths": [
-                "rxjs/Rx",
-                "moment",
-                "lodash",
-                "lodash-es",
-                ".",
-                ".."
-              ]
-            }
-          ],
-          "require-await": "error",
-          "padding-line-between-statements": [
-            "error",
-            {
-              "blankLine": "always",
-              "prev": "block-like",
-              "next": "*"
-            }
-          ],
-          "space-infix-ops": [
-            "error",
-            {
-              "int32Hint": true
-            }
-          ],
-          "object-curly-spacing": [
-            "error",
-            "always"
-          ],
-          "key-spacing": "error",
-          "max-len": [
-            "error",
-            {
-              "code": 160
-            }
-          ],
-          "brace-style": "error",
-          "eqeqeq": "error",
-          "@typescript-eslint/explicit-function-return-type": "off",
-          "@typescript-eslint/explicit-module-boundary-types": "off",
-          "@typescript-eslint/member-ordering": "error",
-          "@typescript-eslint/member-delimiter-style": [
-            "error",
-            {
-              "multiline": {
-                "delimiter": "comma",
-                "requireLast": true
-              },
-              "singleline": {
-                "delimiter": "comma",
-                "requireLast": false
-              },
-              "overrides": {
-                "interface": {
-                  "multiline": {
-                    "delimiter": "semi",
-                    "requireLast": true
-                  },
-                  "singleline": {
-                    "delimiter": "semi",
-                    "requireLast": true
-                  }
+        "@typescript-eslint/explicit-function-return-type": [
+          "error",
+          {
+            "allowExpressions": true
+          }
+        ],
+        "@typescript-eslint/indent": [
+          "error",
+          "tab",
+          {
+            "SwitchCase": 1,
+            "ignoredNodes": [
+              "ObjectLiteralExpression",
+              "PropertyDefinition[decorators]"
+            ]
+          }
+        ],
+        "@typescript-eslint/member-delimiter-style": [
+          "error",
+          {
+            "singleline": {
+              "delimiter": "comma",
+              "requireLast": false
+            },
+            "multiline": {
+              "delimiter": "comma",
+              "requireLast": false
+            },
+            "overrides": {
+              "interface": {
+                "singleline": {
+                  "delimiter": "semi",
+                  "requireLast": true
+                },
+                "multiline": {
+                  "delimiter": "semi",
+                  "requireLast": true
                 }
               }
             }
-          ],
-          "no-empty": "error",
-          "prefer-object-spread": "error",
-          "@typescript-eslint/naming-convention": [
-            "error",
-            {
-              "selector": "variable",
-              "format": [
-                "camelCase",
-                "UPPER_CASE"
-              ]
-            },
-            {
-              "selector": [
-                "classMethod",
-                "typeMethod",
-                "function",
-                "classProperty",
-                "typeProperty"
-              ],
-              "format": [
-                "camelCase"
-              ]
-            },
-            {
-              "selector": "parameter",
-              "format": [
-                "camelCase"
-              ],
-              "leadingUnderscore": "allow"
-            },
-            {
-              "selector": [
-                "typeLike",
-                "enumMember"
-              ],
-              "format": [
-                "PascalCase"
-              ]
-            }
-          ],
-          "@typescript-eslint/array-type": [
-            "error",
-            {
-              "default": "array"
-            }
-          ],
-          "@typescript-eslint/prefer-readonly": "error",
-          "@typescript-eslint/no-empty-function": "error",
-          "@typescript-eslint/no-empty-interface": [
-            "error",
-            {
-              "allowSingleExtends": true
-            }
-          ],
-          "@typescript-eslint/no-explicit-any": "error",
-          "@typescript-eslint/no-var-requires": "error",
-          "@typescript-eslint/restrict-plus-operands": "error",
-          "@typescript-eslint/unbound-method": "error",
-          "no-extra-parens": [
-            "error",
-            "all",
-            {
-              "nestedBinaryExpressions": false
-            }
-          ],
-          "arrow-parens": [
-            "error",
-            "as-needed"
-          ],
-          "prefer-arrow/prefer-arrow-functions": [
-            "error",
-            {
-              "allowStandaloneDeclarations": true,
-              "singleReturnOnly": true
-            }
-          ],
-          "import/no-deprecated": "error",
-          "import/order": [
-            "error",
-            {
-              "newlines-between": "always",
-              "pathGroups": [
-                {
-                  "pattern": "@iap/**",
-                  "group": "external",
-                  "position": "after"
-                },
-                {
-                  "pattern": "environments/**",
-                  "group": "internal",
-                  "position": "before"
-                },
-                {
-                  "pattern": "app/**",
-                  "group": "internal",
-                  "position": "before"
-                }
-              ],
-              "pathGroupsExcludedImportTypes": [
-                "builtin"
-              ],
-              "groups": [
-                "builtin",
-                "external",
-                "internal",
-                "sibling",
-                "parent",
-                "index"
-              ]
-            }
-          ],
-          "@typescript-eslint/no-invalid-this": "error",
-          "@typescript-eslint/no-unnecessary-type-assertion": "error",
-          "no-alert": "error",
-          "no-underscore-dangle": [
-            "error",
-            {
-              "allow": [
-                "_keyManager"
-              ]
-            }
-          ],
-          "deprecation/deprecation": "error",
-          "eol-last": "error",
-          "@typescript-eslint/no-unused-expressions": "error",
-          "@typescript-eslint/no-unused-vars": "error",
-          "no-trailing-spaces": "error",
-          "no-throw-literal": "error",
-          "@typescript-eslint/no-shadow": "error",
-          "max-params": [
-            "error",
-            7
-          ],
-          "consistent-return": "error",
-          "no-nested-ternary": "error",
-          "no-duplicate-imports": "error",
-          "no-extra-semi": "error",
-          "@typescript-eslint/no-inferrable-types": [
-            "error",
-            {
-              "ignoreParameters": false,
-              "ignoreProperties": false
-            }
-          ]
-        }
-      },
-      {
-        "files": [
-          "*.html"
+          }
         ],
-        "extends": [
-          "plugin:@angular-eslint/template/recommended"
+        "@typescript-eslint/member-ordering": [
+          "error",
+          {
+            "default": [
+              "public-static-field",
+              "protected-static-field",
+              "private-static-field",
+              "public-instance-field",
+              "protected-instance-field",
+              "private-instance-field",
+              "constructor",
+              "public-static-method",
+              "protected-static-method",
+              "private-static-method",
+              "public-instance-method",
+              "protected-instance-method",
+              "private-instance-method"
+            ]
+          }
         ],
-        "rules": {
-          "@angular-eslint/template/no-distracting-elements": "error",
-          "@angular-eslint/template/use-track-by-function": "error"
-        }
+        "@typescript-eslint/no-empty-function": "error",
+        "@typescript-eslint/no-inferrable-types": "error",
+        "@typescript-eslint/no-redeclare": ["error"],
+        "@typescript-eslint/no-shadow": ["error"],
+        "@typescript-eslint/prefer-for-of": "error",
+        "@typescript-eslint/quotes": [
+          "error",
+          "double",
+          {
+            "allowTemplateLiterals": true
+          }
+        ],
+        "@typescript-eslint/semi": ["error", "always"],
+        "@typescript-eslint/space-before-function-paren": [
+          "error",
+          {
+            "anonymous": "always",
+            "named": "never",
+            "asyncArrow": "always"
+          }
+        ],
+        "arrow-body-style": "error",
+        "arrow-parens": ["error", "as-needed"],
+        "brace-style": [
+          "error",
+          "1tbs",
+          {
+            "allowSingleLine": true
+          }
+        ],
+        "curly": "error",
+        "dot-notation": "error",
+        "eol-last": "error",
+        "eqeqeq": ["error", "smart"],
+        "getter-return": "error",
+        "grouped-accessor-pairs": ["error", "getBeforeSet"],
+        "guard-for-in": "error",
+        "id-blacklist": "error",
+        "id-match": "error",
+        "max-len": [
+          "error",
+          {
+            "code": 150,
+            "ignoreUrls": true
+          }
+        ],
+        "max-statements-per-line": "error",
+        "no-bitwise": "error",
+        "no-caller": "error",
+        "no-debugger": "error",
+        "no-empty": "error",
+        "no-eval": "error",
+        "no-multiple-empty-lines": [
+          "error",
+          {
+            "max": 1
+          }
+        ],
+        "no-new-wrappers": "error",
+        "no-throw-literal": "error",
+        "no-trailing-spaces": "error",
+        "no-unused-expressions": [
+          "error",
+          {
+            "allowTernary": true
+          }
+        ],
+        "no-unused-labels": "error",
+        "no-var": "error",
+        "object-curly-spacing": ["error", "always"],
+        "object-shorthand": "error",
+        "padded-blocks": [
+          "error",
+          {
+            "classes": "always"
+          }
+        ],
+        "prefer-const": "error",
+        "prefer-template": "error",
+        "quote-props": ["error", "as-needed"],
+        "radix": "error",
+        "spaced-comment": [
+          "error",
+          "always",
+          {
+            "markers": ["/"],
+            "exceptions": ["*"]
+          }
+        ],
+        "use-isnan": "error",
+        "indent": "off"
       }
-    ]
-  }
+    }
+  ]
+}
